Fixed the vertical alignment of image and button on the admin home page, which is mentioned in cmn 51 of issue 878.

--- a/gbif-ipt/src/main/webapp/styles/main.css
+++ b/gbif-ipt/src/main/webapp/styles/main.css
@@ -842,15 +842,7 @@ div.groupmenu ul li a:hover {
 
 table#admintable td {
   vertical-align:middle;
-}
-table#admintable td img.infoImg {
-  top: -2px;
-  left: 5px;
-  vertical-align: middle;
-}
-input#updateResourceMetadata_do_updateMetadata.button {
-  margin-top: 8px;
-  margin-left: 5px;
+  white-space: nowrap;
 }
 table#admintable tr {
   height: 100px;
